--- a/BlogUI/Views/Comments/Delete.cshtml
+++ b/BlogUI/Views/Comments/Delete.cshtml
@@ -60,10 +60,10 @@
             @Html.DisplayFor(model => model.ModeratedComment)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Photo)
+            @Html.DisplayNameFor(model => model.Image)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Photo.Id)
+            @Html.DisplayFor(model => model.Image.Image)
         </dd class>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Article)
