--- a/BlogUI/Views/Comments/Index.cshtml
+++ b/BlogUI/Views/Comments/Index.cshtml
@@ -37,7 +37,7 @@
                 @Html.DisplayNameFor(model => model.ModeratedComment)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Photo)
+                @Html.DisplayNameFor(model => model.Image)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Article)
@@ -73,7 +73,7 @@
                 @Html.DisplayFor(modelItem => item.ModeratedComment)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Photo.Id)
+                @Html.DisplayFor(modelItem => item.Image.Id)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Article.Body)
