--- a/BlogUI/Views/Articles/Delete.cshtml
+++ b/BlogUI/Views/Articles/Delete.cshtml
@@ -48,28 +48,16 @@
             @Html.DisplayFor(model => model.Updated)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Slug)
+            @Html.DisplayNameFor(model => model.Image.Image)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Slug)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.PhotoModel)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.PhotoModel.Id)
+            @Html.DisplayFor(model => model.Image.Image)
         </dd class>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.TopicModel)
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.TopicModel.Description)
-        </dd class>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Creator)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Creator.Id)
         </dd class>
     </dl>
     
