--- a/BlogUI/Views/Articles/Edit.cshtml
+++ b/BlogUI/Views/Articles/Edit.cshtml
@@ -28,40 +28,15 @@
                 <input asp-for="Body" class="form-control" />
                 <span asp-validation-for="Body" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="Status" class="control-label"></label>
-                <select asp-for="Status" class="form-control"></select>
-                <span asp-validation-for="Status" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Created" class="control-label"></label>
-                <input asp-for="Created" class="form-control" />
-                <span asp-validation-for="Created" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Updated" class="control-label"></label>
-                <input asp-for="Updated" class="form-control" />
-                <span asp-validation-for="Updated" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Slug" class="control-label"></label>
-                <input asp-for="Slug" class="form-control" />
-                <span asp-validation-for="Slug" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="PhotoModelId" class="control-label"></label>
-                <select asp-for="PhotoModelId" class="form-control" asp-items="ViewBag.PhotoModelId"></select>
-                <span asp-validation-for="PhotoModelId" class="text-danger"></span>
-            </div>
+            @*<div class="form-group">
+                <label asp-for="Image.Image" class="control-label"></label>
+                <input type="file" asp-for="Image.Image" class="form-control" asp-items="ViewBag.Image.Image"></input>
+                <span asp-validation-for="Image.Image" class="text-danger"></span>
+            </div>*@
             <div class="form-group">
                 <label asp-for="TopicModelId" class="control-label"></label>
                 <select asp-for="TopicModelId" class="form-control" asp-items="ViewBag.TopicModelId"></select>
                 <span asp-validation-for="TopicModelId" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="CreatorId" class="control-label"></label>
-                <select asp-for="CreatorId" class="form-control" asp-items="ViewBag.CreatorId"></select>
-                <span asp-validation-for="CreatorId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
