--- a/BlogUI/Views/Comments/Create.cshtml
+++ b/BlogUI/Views/Comments/Create.cshtml
@@ -43,8 +43,8 @@
                 <span asp-validation-for="Deleted" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="PhotoId" class="control-label"></label>
-                <select asp-for="PhotoId" class ="form-control" asp-items="ViewBag.PhotoId"></select>
+                <label asp-for="Image.Image" class="control-label"></label>
+                <select asp-for="Image.Image" class ="form-control" asp-items="ViewBag.Image.Image"></select>
             </div>
             <div class="form-group">
                 <label asp-for="ArticleId" class="control-label"></label>
