--- a/BlogUI/Views/Comments/Details.cshtml
+++ b/BlogUI/Views/Comments/Details.cshtml
@@ -59,10 +59,10 @@
             @Html.DisplayFor(model => model.ModeratedComment)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Photo)
+            @Html.DisplayNameFor(model => model.Image)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Photo.Id)
+            @Html.DisplayFor(model => model.Image.Image)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Article)
