--- a/BlogUI/Views/Comments/Edit.cshtml
+++ b/BlogUI/Views/Comments/Edit.cshtml
@@ -44,9 +44,9 @@
                 <span asp-validation-for="Deleted" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="PhotoId" class="control-label"></label>
-                <select asp-for="PhotoId" class="form-control" asp-items="ViewBag.PhotoId"></select>
-                <span asp-validation-for="PhotoId" class="text-danger"></span>
+                <label asp-for="Image.Image" class="control-label"></label>
+                <select asp-for="Image.Image" class="form-control" asp-items="ViewBag.Image"></select>
+                <span asp-validation-for="Image.Image" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="ArticleId" class="control-label"></label>
