--- a/BlogUI/Views/Topics/Details.cshtml
+++ b/BlogUI/Views/Topics/Details.cshtml
@@ -29,23 +29,12 @@
             @Html.DisplayFor(model => model.Created)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Updated)
+            @Html.DisplayNameFor(model => model.Image.Image)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Updated)
+            @Html.DisplayFor(model => model.Image.Image)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.PhotoId)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.PhotoId)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Creator)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Creator.Id)
-        </dd>
+
     </dl>
 </div>
 <div>
