--- a/BlogUI/Views/Articles/Edit.cshtml
+++ b/BlogUI/Views/Articles/Edit.cshtml
@@ -29,9 +29,9 @@
                 <span asp-validation-for="Body" class="text-danger"></span>
             </div>
             @*<div class="form-group">
-                <label asp-for="Image.Image" class="control-label"></label>
-                <input type="file" asp-for="Image.Image" class="form-control" asp-items="ViewBag.Image.Image"></input>
-                <span asp-validation-for="Image.Image" class="text-danger"></span>
+                <label asp-for="Image.Photo" class="control-label"></label>
+                <input type="file" asp-for="Image.Photo" class="form-control" asp-items="ViewBag.Image.Photo"></input>
+                <span asp-validation-for="Image.Photo" class="text-danger"></span>
             </div>*@
             <div class="form-group">
                 <label asp-for="TopicModelId" class="control-label"></label>
