--- a/BlogUI/Views/Articles/Create.cshtml
+++ b/BlogUI/Views/Articles/Create.cshtml
@@ -39,8 +39,8 @@
                 <span asp-validation-for="Status" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Image.Image" class="control-label"></label>
-                <input type="file" asp-for="Image.Image" class="form-control" asp-items="ViewBag.Image.Image"></input>
+                <label asp-for="Image.Photo" class="control-label"></label>
+                <input type="file" asp-for="Image.Photo" class="form-control" asp-items="ViewBag.Image.Photo"></input>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
