--- a/BlogUI/Views/Articles/Delete.cshtml
+++ b/BlogUI/Views/Articles/Delete.cshtml
@@ -48,10 +48,10 @@
             @Html.DisplayFor(model => model.Updated)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Image.Image)
+            @Html.DisplayNameFor(model => model.Image.Photo)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Image.Image)
+            @Html.DisplayFor(model => model.Image.Photo)
         </dd class>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.TopicModel)
