--- a/BlogUI/Views/Comments/Details.cshtml
+++ b/BlogUI/Views/Comments/Details.cshtml
@@ -62,7 +62,7 @@
             @Html.DisplayNameFor(model => model.Image)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Image.Image)
+            @Html.DisplayFor(model => model.Image.Photo)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Article)
