--- a/BlogUI/Views/Topics/Create.cshtml
+++ b/BlogUI/Views/Topics/Create.cshtml
@@ -23,9 +23,9 @@
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Image.Image" class="control-label"></label>
-                <input type="file" asp-for="Image.Image" class="form-control" />
-                <span asp-validation-for="Image.Image" class="text-danger"></span>
+                <label asp-for="Image.Photo" class="control-label"></label>
+                <input type="file" asp-for="Image.Photo" class="form-control" />
+                <span asp-validation-for="Image.Photo" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
