--- a/BlogUI/Views/Topics/Delete.cshtml
+++ b/BlogUI/Views/Topics/Delete.cshtml
@@ -36,10 +36,10 @@
             @Html.DisplayFor(model => model.Updated)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Image.Image)
+            @Html.DisplayNameFor(model => model.Image.Photo)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Image.Image)
+            @Html.DisplayFor(model => model.Image.Photo)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Creator)
