--- a/BlogUI/Views/Topics/Index.cshtml
+++ b/BlogUI/Views/Topics/Index.cshtml
@@ -25,7 +25,7 @@
                 @Html.DisplayNameFor(model => model.Updated)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Image.Image)
+                @Html.DisplayNameFor(model => model.Image.Photo)
             </th>
             <th></th>
         </tr>
@@ -46,7 +46,7 @@
                 @Html.DisplayFor(modelItem => item.Updated)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Image.Image)
+                @Html.DisplayFor(modelItem => item.Image.Photo)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
