--- a/BlogUI/Views/Articles/Index.cshtml
+++ b/BlogUI/Views/Articles/Index.cshtml
@@ -19,10 +19,28 @@
                 @Html.DisplayNameFor(model => model.Summary)
             </th>
             <th>
+                @Html.DisplayNameFor(model => model.Body)
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.Status)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Image.Photo)
+                @Html.DisplayNameFor(model => model.Created)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Updated)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Slug)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Image)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.TopicModel)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Creator)
             </th>
             <th></th>
         </tr>
@@ -37,12 +55,29 @@
                 @Html.DisplayFor(modelItem => item.Summary)
             </td>
             <td>
+                @Html.DisplayFor(modelItem => item.Body)
+            </td>
+            <td>
                 @Html.DisplayFor(modelItem => item.Status)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Image.Photo)
+                @Html.DisplayFor(modelItem => item.Created)
             </td>
-
+            <td>
+                @Html.DisplayFor(modelItem => item.Updated)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Slug)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Image.Id)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.TopicModel.Description)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Creator.Id)
+            </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
