--- a/BlogUI/Views/Topics/Index.cshtml
+++ b/BlogUI/Views/Topics/Index.cshtml
@@ -25,7 +25,10 @@
                 @Html.DisplayNameFor(model => model.Updated)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Image.Photo)
+                @Html.DisplayNameFor(model => model.Image)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Creator)
             </th>
             <th></th>
         </tr>
@@ -46,7 +49,10 @@
                 @Html.DisplayFor(modelItem => item.Updated)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Image.Photo)
+                @Html.DisplayFor(modelItem => item.Image.Id)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Creator.Id)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
