--- a/BlogUI/Views/Articles/Create.cshtml
+++ b/BlogUI/Views/Articles/Create.cshtml
@@ -1,5 +1,4 @@
-﻿@using BlogLibrary.Models.Enum
-@model BlogLibrary.Models.ArticleModel
+﻿@model BlogLibrary.Models.ArticleModel
 
 @{
     ViewData["Title"] = "Create";
@@ -11,13 +10,8 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create" enctype="multipart/form-data">
+        <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="TopicModelId" class="control-label"></label>
-                <select asp-for="TopicModelId" class="form-control" asp-items="ViewBag.TopicModelId"></select>
-            </div>
-
             <div class="form-group">
                 <label asp-for="Title" class="control-label"></label>
                 <input asp-for="Title" class="form-control" />
@@ -25,22 +19,45 @@
             </div>
             <div class="form-group">
                 <label asp-for="Summary" class="control-label"></label>
-                <textarea asp-for="Summary" class="form-control"></textarea>
+                <input asp-for="Summary" class="form-control" />
                 <span asp-validation-for="Summary" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Body" class="control-label"></label>
-                <textarea asp-for="Body" class="form-control"></textarea>
+                <input asp-for="Body" class="form-control" />
                 <span asp-validation-for="Body" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Status" class="control-label"></label>
-                <select asp-for="Status" asp-items="@Html.GetEnumSelectList<Status>()" class="form-control"></select>
+                <select asp-for="Status" class="form-control"></select>
                 <span asp-validation-for="Status" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Image.Photo" class="control-label"></label>
-                <input type="file" asp-for="Image.Photo" class="form-control" asp-items="ViewBag.Image.Photo"></input>
+                <label asp-for="Created" class="control-label"></label>
+                <input asp-for="Created" class="form-control" />
+                <span asp-validation-for="Created" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Updated" class="control-label"></label>
+                <input asp-for="Updated" class="form-control" />
+                <span asp-validation-for="Updated" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Slug" class="control-label"></label>
+                <input asp-for="Slug" class="form-control" />
+                <span asp-validation-for="Slug" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="ImageId" class="control-label"></label>
+                <select asp-for="ImageId" class ="form-control" asp-items="ViewBag.ImageId"></select>
+            </div>
+            <div class="form-group">
+                <label asp-for="TopicModelId" class="control-label"></label>
+                <select asp-for="TopicModelId" class ="form-control" asp-items="ViewBag.TopicModelId"></select>
+            </div>
+            <div class="form-group">
+                <label asp-for="CreatorId" class="control-label"></label>
+                <select asp-for="CreatorId" class ="form-control" asp-items="ViewBag.CreatorId"></select>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
