--- a/BlogUI/Views/Comments/Delete.cshtml
+++ b/BlogUI/Views/Comments/Delete.cshtml
@@ -63,7 +63,7 @@
             @Html.DisplayNameFor(model => model.Image)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Image.Photo)
+            @Html.DisplayFor(model => model.Image.Id)
         </dd class>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Article)
