--- a/BlogUI/Views/Topics/Delete.cshtml
+++ b/BlogUI/Views/Topics/Delete.cshtml
@@ -36,11 +36,11 @@
             @Html.DisplayFor(model => model.Updated)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Image.Photo)
+            @Html.DisplayNameFor(model => model.Image)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Image.Photo)
-        </dd>
+            @Html.DisplayFor(model => model.Image.Id)
+        </dd class>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Creator)
         </dt>
