--- a/BlogUI/Views/Topics/Details.cshtml
+++ b/BlogUI/Views/Topics/Details.cshtml
@@ -29,12 +29,23 @@
             @Html.DisplayFor(model => model.Created)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Image.Photo)
+            @Html.DisplayNameFor(model => model.Updated)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Image.Photo)
+            @Html.DisplayFor(model => model.Updated)
         </dd>
-
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Image)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Image.Id)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Creator)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Creator.Id)
+        </dd>
     </dl>
 </div>
 <div>
