--- a/BlogUI/Views/Shared/_Layout.cshtml
+++ b/BlogUI/Views/Shared/_Layout.cshtml
@@ -38,7 +38,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2022 - MyBlog
+            &copy; 2022 - MyBlog | Lynda Foster
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
