--- a/BlogUI/Views/Comments/Index.cshtml
+++ b/BlogUI/Views/Comments/Index.cshtml
@@ -34,9 +34,6 @@
                 @Html.DisplayNameFor(model => model.CreatorId)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.ModeratedComment)
-            </th>
-            <th>
                 @Html.DisplayNameFor(model => model.Article)
             </th>
             <th></th>
@@ -67,10 +64,7 @@
                 @Html.DisplayFor(modelItem => item.CreatorId)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.ModeratedComment)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Article.Body)
+                @Html.DisplayFor(modelItem => item.Article.Title)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
