--- a/BlogUI/Views/Articles/Edit.cshtml
+++ b/BlogUI/Views/Articles/Edit.cshtml
@@ -15,9 +15,9 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
             <div class="form-group">
-                <label asp-for="TopicModelId" class="control-label"></label>
-                <select asp-for="TopicModelId" class="form-control" asp-items="ViewBag.TopicModelId"></select>
-                <span asp-validation-for="TopicModelId" class="text-danger"></span>
+                <label asp-for="SeriesModelId" class="control-label"></label>
+                <select asp-for="SeriesModelId" class="form-control" asp-items="ViewBag.SeriesModelId"></select>
+                <span asp-validation-for="SeriesModelId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Title" class="control-label"></label>
