--- a/BlogUI/Views/Series/Index.cshtml
+++ b/BlogUI/Views/Series/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<BlogLibrary.Models.TopicModel>
+﻿@model IEnumerable<BlogLibrary.Models.SeriesModel>
 
 @{
     ViewData["Title"] = "Index";
