--- a/BlogUI/Views/Articles/Create.cshtml
+++ b/BlogUI/Views/Articles/Create.cshtml
@@ -14,8 +14,8 @@
         <form asp-action="Create" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="TopicModelId" class="control-label"></label>
-                <select asp-for="TopicModelId" class="form-control" asp-items="ViewBag.TopicModelId"></select>
+                <label asp-for="SeriesModelId" class="control-label"></label>
+                <select asp-for="SeriesModelId" class="form-control" asp-items="ViewBag.SeriesModelId"></select>
             </div>
             <div class="form-group">
                 <label asp-for="Title" class="control-label"></label>
