--- a/BlogUI/Views/Articles/Delete.cshtml
+++ b/BlogUI/Views/Articles/Delete.cshtml
@@ -12,10 +12,10 @@
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.TopicModel)
+            @Html.DisplayNameFor(model => model.SeriesModel)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.TopicModel.Title)
+            @Html.DisplayFor(model => model.SeriesModel.Title)
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Title)
