--- a/BlogUI/Views/Series/Delete.cshtml
+++ b/BlogUI/Views/Series/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model BlogLibrary.Models.TopicModel
+﻿@model BlogLibrary.Models.SeriesModel
 
 @{
     ViewData["Title"] = "Delete";
@@ -8,7 +8,7 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>TopicModel</h4>
+    <h4>SeriesModel</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
