--- a/BlogUI/Views/Series/Details.cshtml
+++ b/BlogUI/Views/Series/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model BlogLibrary.Models.TopicModel
+﻿@model BlogLibrary.Models.SeriesModel
 
 @{
     ViewData["Title"] = "Details";
@@ -7,7 +7,7 @@
 <h1>Details</h1>
 
 <div>
-    <h4>TopicModel</h4>
+    <h4>SeriesModel</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
