--- a/BlogUI/Views/Articles/Create.cshtml
+++ b/BlogUI/Views/Articles/Create.cshtml
@@ -39,7 +39,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Image" class="control-label"></label>
-                <input type="file" asp-for="Image.Photo" class="form-control" asp-items="ViewBag.Image"></input>
+                <input type="file" asp-for="Image.Photo" class="form-control" asp-items="ViewBag.Image" accept=".jpg,.jpeg,.png,.ico,.gif,.svg"></input>
             </div>
 
             <div class="form-group">
