--- a/BlogUI/Views/Series/Edit.cshtml
+++ b/BlogUI/Views/Series/Edit.cshtml
@@ -25,7 +25,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Image" class="control-label"></label>
-                <input type="file" asp-for="Image.Photo" class="form-control" asp-items="ViewBag.Image"></input>
+                <input type="file" asp-for="Image.Photo" class="form-control" asp-items="ViewBag.Image" accept=".jpg,.jpeg,.png,.ico,.gif,.svg"></input>
                 <span asp-validation-for="Image" class="text-danger"></span>
             </div>
             <div class="form-group">
