debugged null image exception

--- a/BlogUI/Views/Articles/Index.cshtml
+++ b/BlogUI/Views/Articles/Index.cshtml
@@ -55,7 +55,10 @@
                     @Html.DisplayFor(modelItem => item.Status)
                 </td>
                 <td>
-                    <img src="@imageService.DecodeImage(item.Image.ImageData, item.Image.ImageExtension)" />
+                    @if (item.Image != null)
+                    {
+                        <img src="@imageService.DecodeImage(item.Image.ImageData, item.Image.ImageExtension)" />
+                    }
                 </td>
                 <td>
                     <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
