debugged index view

--- a/BlogUI/Views/Articles/Index.cshtml
+++ b/BlogUI/Views/Articles/Index.cshtml
@@ -57,7 +57,7 @@
                 <td>
                     @if (item.Image != null)
                     {
-                        <img src="@imageService.DecodeImage(item.Image.ImageData, item.Image.ImageExtension)" />
+                        <img class="img-fluid" src="@imageService.DecodeImage(item.Image.ImageData, item.Image.ImageExtension)" />
                     }
                 </td>
                 <td>
