--- a/BlogUI/Views/Articles/Edit.cshtml
+++ b/BlogUI/Views/Articles/Edit.cshtml
@@ -44,7 +44,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Image" class="control-label"></label>
-                <input type="file" name="NewImage" asp-for="Image.Photo" class="form-control" asp-items="ViewBag.ImageId" accept=".jpg,.jpeg,.png,.ico,.gif,.svg"></input>
+                <input type="file" name="NewImage" class="form-control" asp-items="ViewBag.Image" accept=".jpg,.jpeg,.png,.ico,.gif,.svg" />
                 <span asp-validation-for="Image.Photo" class="text-danger"></span>
             </div>
             <div class="form-group">
