--- a/BlogUI/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/BlogUI/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -29,7 +29,7 @@
         </form>
     </div>
     <div class="col-md-6">
-        <img src="@Model.CurrentImage" class="img-fluid rounded-circle img-thumbnail">
+        <img src="@Model.CurrentImage" class="img-fluid rounded-circle img-thumbnail" width="200px">
     </div>
 </div>
 
