restore sweet alerts

--- a/BlogUI/Views/Articles/Details.cshtml
+++ b/BlogUI/Views/Articles/Details.cshtml
@@ -6,43 +6,43 @@
     ViewData["Title"] = "Details";
 }
 
-<h4>@Model.SeriesModel.Title - @Model.Title</h4>
-
-Created: @Model.Created.ToShortDateString() Status: @Model.Status <br />
-<hr />
-<p>
-    @Model.Summary
-</p>
-<div class="row">
-    @if (Model.Image != null)
-    {
-        <img src="@imageService.DecodeImage(Model.Image.ImageData, Model.Image.ImageExtension)" />
-    }
-    <div class="col-lg-8 col-md-10">
-        <p>
-            @Html.Raw(Model.Body)
-        </p>
-    </div>
-</div>
-<hr />
-
-<hr />
-<article>
-    <div class="row">
-        <div class="col text-center font-weight-bold h3">
-            Custom Post Tags
-        </div>
-    </div>
-    <div class="row">
-        <div class="col text-center">
-            @foreach(var tag in Model.Tags)
-            {
-                <a class="btn btn-outline-dark" asp-action="TagIndex" asp-route-tag="@tag.Tag.ToLower()">#@tag.Tag</a>
-            }
-        </div>
-    </div>
-</article>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
-</div>
+    <h4>@Model.SeriesModel.Title - @Model.Title</h4>
+    Created: @Model.Created.ToShortDateString() Status: @Model.Status <br />
+    <hr />
+    <p>
+        @Model.Summary
+    </p>
+    <div class="row">
+        @if (Model.Image != null)
+        {
+            <img src="@imageService.DecodeImage(Model.Image.ImageData, Model.Image.ImageExtension)" />
+        }
+        <div class="col-lg-8 col-md-10">
+            <p>
+                @Html.Raw(Model.Body)
+            </p>
+        </div>
+    </div>
+    <hr />
+
+    <hr />
+    <article>
+       <div class="row">
+           <div class="col text-center font-weight-bold h3">
+               Custom Post Tags
+           </div>
+       </div>
+        <div class="row">
+            <div class="col text-center">
+                @foreach(var tag in Model.Tags)
+                {
+                    <a class="btn btn-outline-dark" asp-action="TagIndex" asp-route-tag="@tag.Tag.ToLower()">#@tag.Tag</a>
+                }
+            </div>
+        </div>
+    </article>
+    <div>
+        <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
+        <a asp-action="Index">Back to List</a>
+    </div>
