--- a/BlogUI/Views/Articles/Details.cshtml
+++ b/BlogUI/Views/Articles/Details.cshtml
@@ -44,6 +44,6 @@
         </div>
     </article>
     <div>
-        <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
+        <a asp-action="Edit" asp-route-id="@Model.Id" asp-route-slug="@Model.Slug">Edit</a> |
         <a asp-action="Index">Back to List</a>
     </div>
